в задании 1 реализована стилизации уведомления (выпадание)

--- a/index.html
+++ b/index.html
@@ -4,15 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style> 
+        .class {
+          padding: 20px;
+          display: none;
+          width: 200px;
+          text-align: left;
+          background-color: #e5eecc;
+          border: solid 1px #c3c3c3;
+        }
+
+        </style>
     <title>Document</title>
 </head>
 <body>
 
 <div id="container">
     <input id="add-item-btn" type="button" value="+">
-    <p>sss</p>
 </div>
- 
+
+
 
 
 <script type="application/javascript" src="./js/jquery.js"></script>
