в задании 1 доработан функционал и стили

--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
           display: none;
           width: 200px;
           text-align: left;
-          background-color: #e5eecc;
-          border: solid 1px #c3c3c3;
+          background: linear-gradient(to left, #33a655, #e5f5e7);
+          border: none;
+          border-radius: 3px;
+        }
+
+        #delete {
+          background: linear-gradient(to left, #c88787, #d1cac9);
+          border: none;
+          border-radius: 3px;
         }
 
         </style>
@@ -27,7 +34,7 @@
 
 
 <script type="application/javascript" src="./js/jquery.js"></script>
-<script type="application/javascript" src="./js/task1.js"></script>
+<script type="application/javascript" src="./js/task_1.js"></script>
 
     
 </body>
